<resources>
    <string name="app_name">QuizMatch</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="empty_email">Please enter email</string>

    <string name="invalid_email">Please enter valid email</string>
    <string name="empty_password">Please enter password</string>

    <string name="invalid_password">Password characters must be greater than 6</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">"Logged in successfully"</string>
    <string name="hindi">Hindi</string>
    <string name="question_list_failed">"Question List Api failed"</string>
    <string name="next">Next</string>
    <string name="india_don_t_have_nation_language">India don\'t have nation language</string>
    <string name="tamil">Tamil</string>
    <string name="english">English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_user_list">User List api is not working</string>
    <string name="unable_create_match">Unable to create match</string>
    <string name="room_Exits">Room already exist</string>
    <string name="you_won">You won</string>
    <string name="oponent_won">Opponent won</string>
    <string name="match_completed">Match Completed</string>
    <string name="your_score">Your Score</string>
    <string name="_25">25</string>
    <string name="_14">14</string>
    <string name="opp_score">Opponent Score</string>
    <string name="share">Share</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid">Not store</string>

</resources>