<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:backgroundTint="@color/grey"
        android:id="@+id/cv_card"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
         >


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/winner"
                android:id="@+id/iv_winner_logo"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_won"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/tv_winner"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_winner_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_score"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_ur_score"
                android:id="@+id/tv_ur_score_heading"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_winner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/tv_ur_score"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@+id/tv_ur_score_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_winner"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opp_score"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/tv_opponent_score_heading"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_ur_score_heading"
                app:layout_constraintTop_toBottomOf="@id/tv_ur_score"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/tv_opponent_score"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_ur_score"
                app:layout_constraintTop_toBottomOf="@id/tv_ur_score"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_opponent_score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="5dp"
                android:background="@color/main_app_color"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btn_share"
                android:text="@string/share"
                android:layout_marginTop="30dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>