<?xml version="1.0" encoding="utf-8"?>
    <layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.quizmatch.app.ui.question.QuestionListViewModel" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_app_color"
    tools:context=".ui.question.QuestionListFragment">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:id="@+id/glv_09"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/glv_01"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:id="@+id/cv_question"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/second_primary"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/glv_01"
        app:layout_constraintEnd_toEndOf="@id/glv_09">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_question"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:gravity="center"
            android:text="What is the national language of india?"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/my_toggle_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/cv_question"
        app:layout_constraintStart_toStartOf="@id/glv_01"
        app:layout_constraintEnd_toEndOf="@id/glv_09"
        app:selectionRequired="false"

    app:singleSelection="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/second_primary"
        android:backgroundTint="@color/grey"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        android:text="@string/hindi" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/second_primary"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            app:cornerRadius="5dp"
            android:text="@string/english" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/second_primary"
            android:textAllCaps="false"
            android:backgroundTint="@color/grey"
            app:cornerRadius="5dp"
            android:text="@string/tamil" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/option_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/second_primary"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            app:cornerRadius="5dp"
            android:text="@string/india_don_t_have_nation_language" />



</com.google.android.material.button.MaterialButtonToggleGroup>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loaderBackground"
        android:clickable="true"
        android:visibility="gone"
        android:elevation="9dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"
        android:focusable="true">
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>